# operon

./: .gitignore  README.md  build-signed.example.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: Operon_Flyer.pptx  downloads.json  index.html  tutorials.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: claude.rs  extensions.rs  files.rs  git.rs  mcp.rs  mod.rs  report.rs  settings.rs  ssh.rs  terminal.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/chat/: ChatPanel.tsx
src/components/editor/: CodeEditor.tsx  EditorArea.tsx
src/components/help/: HelpPanel.tsx
src/components/layout/: ActivityBar.tsx  AppShell.tsx  StatusBar.tsx  TopBar.tsx
src/components/report/: ReportFileSelector.tsx  ReportPhasePanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/setup/: SetupWizard.tsx
src/components/sidebar/: ExtensionsView.tsx  HelpView.tsx  ProtocolsView.tsx  RemoteExplorer.tsx  SSHView.tsx  Sidebar.tsx
src/components/terminal/: TerminalArea.tsx  TerminalInstance.tsx
src/context/: ProjectContext.tsx
src/lib/: extensions.ts  lspClient.ts  mcp.ts  settings.ts  ssh.ts
src/types/: chat.ts
